Replaced a couple of toList() calls